viewer/display.css
body {
  background-color: #222;
  color: #ddd;
  font-family: "Segoe UI", Arial, sans-serif;
}

#title, #titleimage {
  margin-top: 20px;
  margin-left: 30px;
  height: 80px;
  display: inline;
}

a {
  color: #ddd;
  text-decoration: none;
  transition: color 0.1s;
}

a:hover{
  color: #ffa74e;
}

#titleimage {
  transition: transform 1s, filter 1s;
}

a:hover #titleimage {
  filter: hue-rotate(-160deg);
  transform: rotate(360deg);
}

h1 {
  font-weight: lighter;
  font-size: 4em;
}

.error {
  font-size: 2em;
  font-style: italic;
  color: #f88;
  font-weight: lighter;
}

.hidden { display: none !important; }

ol, ul { list-style-type: none; }


.header { background-color: #333; }

.drivebar { top: -1em; }

.drivebar, .barsegment {
  height: 1.8em;
  font-weight: bold;
  text-align: right;
  vertical-align: bottom;
}

.drivebar {
  box-sizing: border-box;
  width: 100%;
  background-color: #eee;
  position: relative;
  color: #222;
}

.barsegment {
  position: absolute;
  top: 0;
  left: 0;
  color: white;
  overflow: hidden;
  transition: width 0.2s;
  height: 100%;
}

.barsegment::after, .drivebar::after {
  content: "  "
}

.barsegment.used {
  background-color: hsl(210, 70%, 50%);
}
.barsegment.selected {
  background-color: hsl(120, 70%, 70%);
}
.barsegment.selected.tooMuch {
  background-color: hsl(0, 70%, 70%);
}
.barsegment.games {
  background-color: hsl(270, 70%, 50%);
  height: 90%;
}

.barsegment.part {
  height: 15%;
  transition: height 0.5s;
}
.barsegment.part.hovered {
  height: 90%; 
}

.drivebar.hasgame .barsegment.part{
  height: 0%;
}

.gamelist {
  list-style: none;
  padding-left: 0;
  width: 100%;
}

.item, .meta {
  font-size: 20px;
  padding-left: 10px;
  background-color: #555;
  transition: padding-left 0.5s, background-color 0.5s, color 0.5s;
}

.meta { font-weight: bold; }

.meta.free { background-color: #555; }
.meta.used { background-color: hsl(210, 50%, 30%); }
.meta.allGames { background-color: hsl(270, 50%, 30%); }

.item:not(.locked):nth-child(even) {
  background-color: #444;
}
.item:not(.locked):hover {
  padding-left: 20px;
  background-color: hsl(300, 50%, 30%);
  color: white;
}

.item.locked {
  padding-left: 40px;
  background-color: hsl(340, 50%, 30%);
  color: white;
}

.col1, .col2 { position: absolute; }

.col1 { left: calc(90% - 6.5em); }
.col2 { left: calc(100% - 4.5em); }

.playLink {
  position: relative;
  left: 30px;
  opacity: 0;
  transition: opacity 0.5s, left 0.5s;
}
.item:hover .playLink {
  opacity: 1;
  left: 10px;
}

#info h2 {
  display: block;
  position: absolute;
  left: 10px;
  top: -0.5em;
}
#infoImage {
  position: absolute;
  right: 0;
  height: 100%;
}

